#6 - Dto katmanı ve AppUserRegisterDto Sınıfı #7 - AppUserRegister Fluent Validation

--- a/EasyCashIdentityProject.DtoLayer/EasyCashIdentityProject.DtoLayer.csproj
+++ b/EasyCashIdentityProject.DtoLayer/EasyCashIdentityProject.DtoLayer.csproj
@@ -19,4 +19,14 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Dtos\AppRoleDtos\" />
+    <Folder Include="Dtos\CustomerAccountDtos\" />
+    <Folder Include="Dtos\CustomeraccountProcessDtos\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EasyCashIdentityProject.EntityLayer\EasyCashIdentityProject.EntityLayer.csproj" />
+  </ItemGroup>
+
 </Project>
